zoc/src/snapshots/zoc__parser_tests__app_no_args.snap
---
source: src/parser_tests.rs
expression: "&cst"
---
App(
    App {
        lparen: ByteIndex(
            0,
        ),
        callee: Deb(
            NumberLiteral {
                value: 0,
                span: (
                    ByteIndex(
                        1,
                    ),
                    ByteIndex(
                        2,
                    ),
                ),
            },
        ),
        args: Nil,
        rparen: ByteIndex(
            2,
        ),
    },
)
