zoc/src/snapshots/zoc__parser_tests__deb_0.snap
---
source: src/parser_tests.rs
expression: "&cst"
---
Deb(
    NumberLiteral {
        value: 0,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                1,
            ),
        ),
    },
)
