zoc/src/snapshots/zoc__parser_tests__ind_nonliteral_name.snap
---
source: src/parser_tests.rs
expression: "&cst"
---
Some(
    Number(
        NumberLiteral {
            value: 2,
            span: (
                ByteIndex(
                    27,
                ),
                ByteIndex(
                    28,
                ),
            ),
        },
    ),
)
