zoc/src/snapshots/zoc__parser_tests__ind_nonliteral_universe.snap
---
source: src/parser_tests.rs
expression: "&cst"
---
Some(
    Number(
        NumberLiteral {
            value: 1,
            span: (
                ByteIndex(
                    16,
                ),
                ByteIndex(
                    17,
                ),
            ),
        },
    ),
)
