zoc/src/snapshots/zoc__parser_tests__vcon_nonliteral_ind.snap
---
source: src/parser_tests.rs
expression: "&err"
---
Some(
    Number(
        NumberLiteral {
            value: 1,
            span: (
                ByteIndex(
                    17,
                ),
                ByteIndex(
                    18,
                ),
            ),
        },
    ),
)
