zoc/src/snapshots/zoc__parser_tests__vcon_nonliteral_vcon_index.snap
---
source: src/parser_tests.rs
expression: "&err"
---
Some(
    LParen(
        ByteIndex(
            169,
        ),
    ),
)
